Added a help page. Added help tips in various places. Fixed a plot settings bug.

--- a/CAPO_online/CAPO_dashboard/templates/corr_monitor/filters.html
+++ b/CAPO_online/CAPO_dashboard/templates/corr_monitor/filters.html
@@ -39,4 +39,11 @@
 {% else %}
 <p>No filters were found</p>
 {% endif %}
-<a href="/corr_monitor/filters/add/">New Filter</a>
+<div class="breadcrumbs"><a href="/corr_monitor/filters/add/">New Filter</a>
+<br>Tips:
+<ul>
+<li>
+To apply a filter, click "apply" and manually refresh your browser.
+</li>
+
+</ul></div> 
