--- a/CAPO_online/CAPO_dashboard/templates/corr_monitor/index.html
+++ b/CAPO_online/CAPO_dashboard/templates/corr_monitor/index.html
@@ -14,6 +14,8 @@
 {% endblock %}
 {% block breadcrumbs %}
 {{block.super}}&nbsp;&nbsp;<a href="/admin/corr_monitor/">Admin</a>
+&nbsp;&nbsp;<a href="/corr_monitor/update/">Update</a>
+&nbsp;&nbsp;<a href="/corr_monitor/help/">Help</a>
 {% endblock %}
 {% block extrastyle %}
 <link rel="stylesheet" type="text/css" href="/corr_monitor/media/css/corr.css">
