Several bugfixes in plotting and etc display. New features:     * Added oCAPO home link to admin pages.     * 100 to 200 MHz plot axis mode available. Limits need to be better defined.     * log and phase plotting functions added     * semilogx,semilogy and loglog plot functions added TODO     * Add plotting as option to filter.     * Figure out automatic updating.     * Add ability to create warnings. Working towards 1.1 release.

--- a/CAPO_online/CAPO_dashboard/templates/admin/base_site.html
+++ b/CAPO_online/CAPO_dashboard/templates/admin/base_site.html
@@ -5,6 +5,7 @@
 
 {% block branding %}
 <h1 id="site-name">{% trans 'oCAPO administration' %}</h1>
+&nbsp;&nbsp;&nbsp;<a href="/corr_monitor/">oCAPO Home</a>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
