Completed trace feature. Auto-reload added. Improved navigation with tabs. Added logging indicator. Added time select option to trace.

--- a/CAPO_online/CAPO_dashboard/templates/corr_monitor/help.html
+++ b/CAPO_online/CAPO_dashboard/templates/corr_monitor/help.html
@@ -31,10 +31,13 @@ to the <b>Corr DBs</b> listing and clicking <b>add corr db</b>.
 <li>100 to 200 MHz plot axis mode available.  Limits need to be better defined.
 <li>log and phase plotting functions added
 <li>semilogx,semilogy and loglog plot functions added
+<li>Added automatic updating via "streaming" option. Use "inspect" to pause.
+<li>Added ability to create warnings.
+<li>Added logging of mean(abs(baseline spectrum)). Viewable with trace function. Same filters apply
+<li>Add manage function: python manage.py update <db_id>
 TODO
+<li>Add toggle_update_daemon form/indicator.
 <li>Add plotting as option to filter.
-<li>Figure out automatic updating.
-<li>Add ability to create warnings.
 
 </ul>
 <b> Bugfixes </b>
