--- a/CAPO_online/CAPO_dashboard/templates/corr_monitor/help.html
+++ b/CAPO_online/CAPO_dashboard/templates/corr_monitor/help.html
@@ -1,10 +1,11 @@
 {% extends "corr_monitor/base_site.html" %}
 
 {% block content %}
+{% block content %}
 <h3>Basic Usage</h3>
-<p>Visibilities or baseline listings are extracted from the database written by 
-the correlator recieve script.  Once oCAPO is pointed at the correct database its 
-internal visibility index can be updated by clicking <b>Update</b> near the top of the 
+<p>Visibilities or baseline listings are extracted from the database written by
+the correlator recieve script.  Once oCAPO is pointed at the correct database its
+internal visibility index can be updated by clicking <b>Update</b> near the top of the
 page.  This update only needs to be performed when the database is changed or
 the correlator is reconfigured.</p>
 <p>
@@ -12,17 +13,27 @@ The visibility listing is displayed in a grid on the <b>Home</b> view.  The list
 may be filtered by antenna number, polerization etc using the <b>Filters</b> to the
 right of the visibility table. Create or modify filters as necessary. Only one
 is applied at a time. Refresh the page (ctrl-R) to apply the changes to the visibility
-listing.
+listing. <b>Select "streaming" mode to automatically update page</b>
+</p>
+<p>Use the trace option to plot logged <b>average</b> values. <i>Loggin status is
+indicated in the upper-right corner of the dashboard.</i> Activate logging by navigating to
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;cd ~/CAPO_online/CAPO_dashboard/
+<br>and then starting the update daemon with
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;python manage.py update [dbid]
+<br>where the dbid is 1 for beestrong and 2 for beetrue. (This interface will be improved in next cycle.)
+
 </p>
 <p>
-Click on a visibility in the table to see a plot of the correlator output. Change 
-the properties of the plot using the table at the right. This function hits the 
+Click on a visibility in the table to see a plot of the correlator output. Change
+the properties of the plot using the table at the right. This function hits the
 database every time it is generated. To monitor a baseline, simply refresh the page.
 </p>
 <p>
 Add a correlator database by going into the <b>Admin</b> interface and navigating
-to the <b>Corr DBs</b> listing and clicking <b>add corr db</b>.
+to the <b>Corr DBs</b> listing and clicking <b>add corr db</b>. <i>Database selection is currently 
+limited to those in /var/www</i>
 </p>
+
 <h3> CHANGELOG</h3>
 <h4>May 2009 v1.1 - DCJ:</h4>
 <b>New Features</b>
@@ -34,10 +45,9 @@ to the <b>Corr DBs</b> listing and clicking <b>add corr db</b>.
 <li>Added automatic updating via "streaming" option. Use "inspect" to pause.
 <li>Added ability to create warnings.
 <li>Added logging of mean(abs(baseline spectrum)). Viewable with trace function. Same filters apply
-<li>Add manage function: python manage.py update <db_id>
-TODO
-<li>Add toggle_update_daemon form/indicator.
-<li>Add plotting as option to filter.
+<li>Added manage function: python manage.py update db_id. Starts logging avg bl every 10s.
+<li>Added indicator for update daemon. "Logging is OFF/ON" in top right corner of main page.
+<li>Added time ranges for trace.
 
 </ul>
 <b> Bugfixes </b>
@@ -48,7 +58,7 @@ TODO
 </ul>
 
 <h4>March 2009 v1.0 - DCJ:</h4>
-<b>Features<b>
+<b>Features</b>
 <ul>
 <li>Visibility filtering.
 <li>Plotting (individual baseline)
@@ -57,14 +67,6 @@ TODO
 </ul>
 
 
-
-For next version v1.1:
-<ul>
-<li>Data quality monitoring.
-<li>Multiple plots at the same time
-<li>User selectable plot function (abs,phase,unwrapped phase, etc)
-<li><b>Open for suggestions!</b>
-</ul>
 
 
 
